--- a/src/app/views/forms/model/model.component.html
+++ b/src/app/views/forms/model/model.component.html
@@ -1,29 +1,14 @@
-<h1>
-  {{title}}
-</h1>
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-  <div class="form-group">
-    <label class="center-block">Name:
-      <input type="text" class="form-control" formControlName="name">
-    </label>
-    <div *ngIf="formErrors.name" class="alert alert-danger">
-      {{ formErrors.name }}
-    </div>
-  </div>
-  <div class="form-group">
-    <label class="center-block">oracleId:
-      <input type="number" class="form-control" formControlName="oracleId">
-    </label>
-    <div *ngIf="formErrors.oracleId" class="alert alert-danger">
-      {{ formErrors.oracleId }}
-    </div>
-  </div>
-  <div class="form-group">
-    <label class="center-block">password:
-      <input type="password" class="form-control" formControlName="password">
-    </label>
-  </div>
-  <div class="form-group">
-    <input type="submit" value="login">
-  </div>
+<p>
+  reactive works!
+</p>
+
+<form novalidate>
+  <input ngControl="name" placeholder="Name">
+  <input ngControl="eamilid" placeholder="Emialid">
+  <input ngControl="username" placeholder="Username">
+  <input ngControl="location" placeholder="Location">
+  <button [disabled]="!form.valid" >Submit</button>
 </form>
+ <p> Form value: {{ form.value }}</p>
+<p>Form Status: {{ form.status }}</p>
+
